increase the gap between tableview_properties in issue detail page

--- a/src/sass/abstracts/_mixin.scss
+++ b/src/sass/abstracts/_mixin.scss
@@ -26,7 +26,7 @@
 
 @mixin tableView_property() {
   display: flex;
-  gap: 10px;
+  gap: 20px;
   align-items: center;
   text-align: center;
   label {
